# aprender

./: .gitignore  .pv.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  build_codegen.rs  justfile
.cargo/: config.toml.dev-overrides
benches/: bpe.rs
book/src/: SUMMARY.md
contracts/: apr-cpu-q4k-routing-v1.yaml  apr-format-v2.yaml  bpe-tokenizer-v1.yaml  chat-template-semantics-v1.yaml  classification-finetune-v1.yaml  compile-v1.yaml  data-quality-v1.yaml  element-wise-ops-v1.yaml  eval-v1.yaml  format-conversion-v1.yaml  hpo-v1.yaml  inference-v1.yaml  inspection-v1.yaml  kernel-fusion-v1.yaml  layer-parity-v1.yaml  matvec-kernel-v1.yaml  normalization-kernel-v1.yaml  profile-v1.yaml  pruning-v1.yaml  publish-safety-v1.yaml  qa-pipeline-v1.yaml  quantization-schemes-v1.yaml  rope-kernel-v1.yaml  serve-v1.yaml  softmax-kernel-v1.yaml  tensor-layout-v1.yaml  training-pipeline-v1.yaml  transpose-kernel-v1.yaml
crates/aprender-bench-compute/: Cargo.toml
crates/aprender-bench-compute/benches/: activations.rs  elementwise.rs  matmul.rs  norms.rs  quantization.rs  rope.rs  scaling.rs  softmax.rs  tensor_overhead.rs  transpose.rs
crates/aprender-bench-compute/src/: lib.rs  sizes.rs
crates/aprender-bench-tokenizer/: Cargo.toml
crates/aprender-bench-tokenizer/benches/: batch.rs  decode.rs  encode.rs  loading.rs  roundtrip.rs  scaling.rs  special_tokens.rs
crates/aprender-bench-tokenizer/src/: lib.rs  payloads.rs
docs/: design-by-contract.md  qualify-matrix.md
examples/: advanced_merge.rs  apr_checkpoint_lifecycle.rs  apr_inspection.rs  apr_scoring.rs  bench_bpe.rs  continual_pretraining.rs  dam_merge.rs  data_quality_pipeline.rs  design_by_contract.rs  distillation_advanced.rs  dpo_preference.rs  eval_harness.rs  evolutionary_merge.rs  moe_construction.rs  per_layer_merge.rs  pii_filtering.rs  publish_shell_safety.rs  qa_chat.rs  qa_serve.rs  rlvr.rs  shell_safety_training.rs  sovereign_stack.rs  tokenizer_surgery.rs  xor_training.rs
proofs/: kani_harnesses.rs
scripts/: benchmark-2x-ollama.sh  benchmark-matrix.sh  check_publish_safety.sh  verify_pmat_116.sh
src/: calibration_tests_contract.rs  weak_supervision.rs
tests/: falsification_spec_v10_tests.rs  (+1 more)
(+531 files in other folders)
